--- a/Rock Paper Scissors/rock_paper_scissors.html
+++ b/Rock Paper Scissors/rock_paper_scissors.html
@@ -14,6 +14,8 @@
 
 <button onclick="play('Scissors')">Scissors</button>
 
+<button onclick="records('reset')">Reset Scores</button>
+
 <p>Click here to see the final version of the project</p>
 
 </body>
