--- a/Rock Paper Scissors/rock_paper_scissors.html
+++ b/Rock Paper Scissors/rock_paper_scissors.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="appearance.css">
     <script src="random.js"></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
 
-<p>Rock Paper Scissors</p>
+<div class="rps-card">
+    <h1 class="rps-title">Rock Paper Scissors</h1>
 
-<button onclick="play('Rock')">Rock</button>
-
-<button onclick="play('Paper')">Paper</button>
-
-<button onclick="play('Scissors')">Scissors</button>
-
-<button onclick="records('reset')">Reset Scores</button>
-
-<p>Click here to see the final version of the project</p>
+    <div class="rps-row">
+        <button class="rps-btn rock" onclick="play('Rock')">Rock</button>
+        <button class="rps-btn paper" onclick="play('Paper')">Paper</button>
+        <button class="rps-btn scissors" onclick="play('Scissors')">Scissors</button>
+        <button class="rps-btn reset" onclick="records('reset')">Reset</button>
+    </div>
+</div>
 
 </body>
 </html> 
