--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -2,21 +2,24 @@
 <html>
 <head>
     <link rel="stylesheet" href="appearance.css">
-    <script src="random.js"></script>
+    <script src="random.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
 
 <div class="rps-card">
     <h1 class="rps-title">Rock Paper Scissors</h1>
-
     <div class="rps-row">
         <button class="rps-btn rock" onclick="play('Rock')">Rock</button>
         <button class="rps-btn paper" onclick="play('Paper')">Paper</button>
-        <button class="rps-btn scissors" onclick="play('Scissors')">Scissors</button>
-        <button class="rps-btn reset" onclick="records('reset')">Reset</button>
+    <button class="rps-btn scissors" onclick="play('Scissors')">Scissors</button>
+    <!-- Result area shown above the reset button -->
+    <p class="js-score result-area"></p>
+    <button class="rps-btn reset" onclick="records('reset')">Reset Score</button>
+    <!-- Toggle UI button to show/hide the result area -->
+    <button id="toggle-result" class="rps-btn reset" type="button">Show Result</button>
     </div>
-</div>
 
+</div>
 </body>
 </html> 
