--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="appearance.css">
     <script src="random.js" defer></script>
-    <title>Rock Paper Scissors</title>
 </head>
 <body>
 
 <div class="rps-card">
     <h1 class="rps-title">Rock Paper Scissors</h1>
+
     <div class="rps-row">
         <button class="rps-btn rock" onclick="play('Rock')">Rock</button>
         <button class="rps-btn paper" onclick="play('Paper')">Paper</button>
-    <button class="rps-btn scissors" onclick="play('Scissors')">Scissors</button>
-    <!-- Result area shown above the reset button -->
-    <p class="js-score result-area"></p>
-    <button class="rps-btn reset" onclick="records('reset')">Reset Score</button>
-    <!-- Toggle UI button to show/hide the result area -->
-    <button id="toggle-result" class="rps-btn reset" type="button">Show Result</button>
+        <button class="rps-btn scissors" onclick="play('Scissors')">Scissors</button>
+        <button class="rps-btn reset" onclick="records('reset')">Reset</button>
     </div>
-
 </div>
+
 </body>
-</html> 
+</html>
