--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <button class="rps-btn rock" onclick="play('Rock')">Rock</button>
         <button class="rps-btn paper" onclick="play('Paper')">Paper</button>
         <button class="rps-btn scissors" onclick="play('Scissors')">Scissors</button>
+        <!-- Result area shown above the reset button -->
+        <p class="js-score result-area"></p>
         <button class="rps-btn reset" onclick="records('reset')">Reset</button>
+        <!-- Toggle UI button to show/hide the result area -->
+        <button id="toggle-result" class="rps-btn reset" type="button">Show Result</button>
     </div>
 </div>
 
