--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rock Paper Scissors</title>
-    <link rel="icon" href="1.jpg">
+    <link rel="icon" href="1.jpg" type="image/jpeg">
     <link rel="stylesheet" href="appearance.css">
     <script src="random.js" defer></script>
 </head>
