--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="appearance.css">
     <script src="random.js" defer></script>
     <title>Rock Paper Scissors</title>
+    <link rel="icon" href="1.jpg" type="image/jpeg">
 </head>
 <body>
 
@@ -23,3 +24,4 @@
 </div>
 </body>
 </html> 
+
